assets/css/style.css
@font-face {
      font-family: HammersmithOne;
      src:url(/assets/fonts/HammersmithOne.ttf);
      font-weight: bold;
    }
body {
    font-family: HammersmithOne;
    background-color: #f3f8fb;
    color: black;
    font-size: 16px;
    text-align: center;
  }

p {
  text-align: left;
}

h2 {
  font-size: 60px;
}

.logo{
  margin-top: 1vmin;
  height: 20vmin;
}
.headerStupeurImage{
  height: 20vmin;
  width: auto;
}

.headerStupeur{
  height: 20vmin;
}

.menu {
  margin-top: 6vmin;
  padding-left: 0em;
  background-color: #000000;
  height: 8vmin;
  text-align: center;  /* align the inline(-block) elements horizontally */
  font: 0/0 a;        /* remove the gap between inline(-block) elements */
}

.menu:before {    /* create a full-height inline block pseudo=element */
    content: ' ';
    display: inline-block;
    vertical-align: middle;  /* vertical alignment of the inline element */
    height: 100%;
}

.posttitle_pugilat{
    text-align: left;
  }

.imgMenu {
  display: inline-block;
  vertical-align: middle;  /* vertical alignment of the inline element */
  margin: auto;
  height: 3vmin;
}

.postcontent_stupeur > p > img {
  width: 80vw;
}

.arrowImg {
  height: 13vh;
}

.pagination {
  font-size: 4vh;
}

.footer {
  background: #000000;
}

.footerLogo{
  width: 8vw;
}

.leftArrow{
  margin-right: 8vw;
}

